package smarthome.domain.actuators;

public interface ActuatorSpecificDecimal
{
    boolean setDecimalValue(double value);
}
